boost (1.33.1+1.34.0-cvs20070326-1) experimental; urgency=low

  * New upstream snapshot version.

 -- Domenico Andreoli <cavok@debian.org>  Tue, 27 Mar 2007 00:47:14 +0200

boost (1.33.1+1.34.0-cvs20070221-1) experimental; urgency=low

  * New upstream snapshot version.
  * Improved the build process.
  * Now both st/mt variants are installed as well as their new symlinks
    to ease the linking. No, we still have not pkg-config support.

 -- Domenico Andreoli <cavok@debian.org>  Fri, 23 Mar 2007 13:47:15 +0100

boost (1.33.1+1.34.0-cvs20060531-1) experimental; urgency=low

  * New upstream snapshot version.
  * CSS file for HTML documentation is now correctly installed.
    Closes: #358986.
  * Standards-Version is now set to 3.7.2.

 -- Domenico Andreoli <cavok@debian.org>  Wed, 31 May 2006 16:09:49 +0200

boost (1.33.1-4) unstable; urgency=low

  * Graph library is built with -mlong-calls on hppa too.

 -- Domenico Andreoli <cavok@debian.org>  Wed, 22 Mar 2006 14:21:05 +0100

boost (1.33.1-3) unstable; urgency=low

  * Fixed licensing of Graph library.  Closes: #349209.
    Patch from upstream CVS repository, courtesy of Doug Gregor.
  * Fixed build process of Graph library.  Closes: #326089.
  * Shared library packages do not install the empty /usr/include/boost
    directory any more.  Closes: #344599.
  * Added manpage for bcp.  Closes: #348523.
  * Static version of Thread library is also installed.  Closes: #357986.

 -- Domenico Andreoli <cavok@debian.org>  Thu, 16 Mar 2006 13:40:06 +0100

boost (1.33.1-2) unstable; urgency=low

  [ Christophe Prud'homme ]
  * Bug fix: "libboost-wave-dev: Dependency on libboost-filesystem-dev
    missing", thanks to Martin v . LÃÂ¶wis (Closes: #346367).

  [ Domenico Andreoli ]
  * boost/graph/topological_sort.hpp: removed name of unused parameter
    to prevent long compiler warning.  Closes: #347519.
  * Applied patch from upstream CVS to fix parsing of valid options
    with a common root.  Closes: #345714.